--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -21,7 +21,7 @@
     <!--head-->
     <div class="site-topbar">
         <div class="container">
-            <div class="topbar-info ">
+            <div class="topbar-info">
                 <a href="#" target="_blank">客服：400-900-5000</a>
                 <span class="sep"></span>
                 <a href="#" target="_blank">登录</a>&nbsp;/&nbsp;<a href="#" target="_blank">注册</a>
@@ -267,7 +267,7 @@
         <div class="band-story">
             <ul id="feature-list" class="feature-list">
                 <li id="item-one" class="item-one hover-selected">
-                    <img src="images/pic/in_01.jpg" alt=""/>
+                    <img src="images/pic/in_01.jpg" alt="alt"/>
                 </li>
                 <li id="item-two" class="item-two">
                     <img src="images/pic/in_02.jpg" alt=""/>
