--- a/newGuo/lecture.html
+++ b/newGuo/lecture.html
@@ -13,6 +13,82 @@
     <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<script>
+    var lectureRightTemplate = '<ul>'+
+            '<li>' +
+            '<h3 class="column-title"> '+
+            '国馆大讲堂是什么？'+
+            '</h3>'+
+            '<p class="column-content">'+
+            '       国馆大讲堂是国馆领衔40余家文化自媒体，共同发起的文化公益活动品牌，定位于文化公益领域，以公益、无偿的形式，鼎力支持各类与文化相关之活动。'+
+            '<p class="column-content">'+
+            '       在“国馆大讲堂”，我们集结文化艺术领域的名人大家、艺术分子、文化达人……当无数个声音集结在一起时，定能吸引无数双眼睛，我们共同为中国文化呐喊，让这个浮躁的时代被复苏的人文关怀所温暖。'+
+            '</p>'+
+            '</p>'+
+            '</li>'+
+            '        <li>'+
+            '<div class="column-img-text">'+
+            '        <h3 class="column-title">'+
+            '        梦想无需众筹，一切都是免费的！'+
+            '</h3>'+
+            '<div class="img-text-group clearfix">'+
+            '        <div class="left">'+
+            '        <img src="images/lecture/1_01.jpg" alt=""/>'+
+            '       </div>'+
+            '<div class="right">'+
+            '       <p class="column-content-little">'+
+            '       最强场地：2000㎡文化艺术空间免费使用，广州人文新地标，诗意、禅意、酒意，灵动空间，任创想驰骋!'+
+            '</p>'+
+            '</div>'+
+            '</div>'+
+            '<div class="img-text-group clearfix">'+
+            '<div class="left">'+
+            '<img src="images/lecture/1_02.jpg" alt=""/>'+
+            '</div>'+
+            '<div class="right">'+
+            '<p class="column-content-little">'+
+            '最强宣传：国馆文化自媒体联盟免费推广，微信最具影响力的文化自媒体阵营，300万粉丝皆为忠实拥趸，真正体验“万众瞩目”!'+
+            '</p>'+
+            '</div>'+
+            '</div>'+
+            '<div class="img-text-group clearfix">'+
+            '<div class="left">'+
+            '<img src="images/lecture/1_03.jpg" alt=""/>'+
+            '</div>'+
+            '<div class="right">'+
+            '<p class="column-content-little">'+
+            '最强资源：“国馆会”高端人脉资源和平台资源鼎力支持，让有限的空间聚变为无限的平台，在这里，每个人都有机会一鸣惊人！'+
+            '</p>'+
+            '</div>'+
+            '</div>'+
+            '</div>'+
+            '</li>'+
+            '<li>'+
+            '<h3 class="column-title">'+
+            '怎样申请加入“国馆大讲堂”文化公益项目？'+
+            '</h3>'+
+            '<div class="column-third">'+
+            '<p>'+
+            '1、开放对象：<br>'+
+            '文化、艺术界人士（专业与非专业均可）'+
+            '</p>'+
+            '        <p>'+
+            '2、申请条件：<br>'+
+            '拥有与文化相关的个人作品、个人观点等……'+
+            '</p>'+
+            '       <p>'+
+            '3、申请方式：<br>'+
+            '提交个人资料、作品（若有参与展览、讲坛等活动经验请附上案例）至'+
+            '<a href="mailto:yaozz@guoguan.com">'+
+            '        yaozz@guoguan.com'+
+            '</a>'+
+            '或联系国馆热线400-900-5000'+
+            '，经国馆审核通过后，会安排专人联系，落实宣传、布展等具体事宜。'+
+            '</p>'+
+            '</div>'+
+            '</li>'+
+            '</ul>'
+</script>
 <style>
     /* tab切换页 */
     .etabs {
@@ -224,80 +300,9 @@
                 </div>
             </div>
             <div class="lecture-tab-right">
-                <ul>
-                    <li>
-                        <h3 class="column-title">
-                            国馆大讲堂是什么？
-                        </h3>
-                        <p class="column-content">
-                            国馆大讲堂是国馆领衔40余家文化自媒体，共同发起的文化公益活动品牌，定位于文化公益领域，以公益、无偿的形式，鼎力支持各类与文化相关之活动。
-                            <p class="column-content">
-                        在“国馆大讲堂”，我们集结文化艺术领域的名人大家、艺术分子、文化达人……当无数个声音集结在一起时，定能吸引无数双眼睛，我们共同为中国文化呐喊，让这个浮躁的时代被复苏的人文关怀所温暖。
-                            </p>
-                        </p>
-                    </li>
-                    <li>
-                        <div class="column-img-text">
-                            <h3 class="column-title">
-                                梦想无需众筹，一切都是免费的！
-                            </h3>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_01.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强场地：2000㎡文化艺术空间免费使用，广州人文新地标，诗意、禅意、酒意，灵动空间，任创想驰骋!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_02.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强宣传：国馆文化自媒体联盟免费推广，微信最具影响力的文化自媒体阵营，300万粉丝皆为忠实拥趸，真正体验“万众瞩目”!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_03.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强资源：“国馆会”高端人脉资源和平台资源鼎力支持，让有限的空间聚变为无限的平台，在这里，每个人都有机会一鸣惊人！
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <h3 class="column-title">
-                            怎样申请加入“国馆大讲堂”文化公益项目？
-                        </h3>
-                        <div class="column-third">
-                           <p>
-                              1、开放对象：<br>
-                               文化、艺术界人士（专业与非专业均可）
-                           </p>
-                            <p>
-                                2、申请条件：<br>
-                                拥有与文化相关的个人作品、个人观点等……
-                            </p>
-                            <p>
-                                3、申请方式：<br>
-                                提交个人资料、作品（若有参与展览、讲坛等活动经验请附上案例）至
-                                <a href="mailto:yaozz@guoguan.com">
-                                    yaozz@guoguan.com
-                                </a>
-                                或联系国馆热线400-900-5000
-                                ，经国馆审核通过后，会安排专人联系，落实宣传、布展等具体事宜。
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+                <script>
+                    document.write(lectureRightTemplate);
+                </script>
             </div>
         </div>
         <div id="tabs1-two" class="clearfix tab-mb">
@@ -353,80 +358,9 @@
                 </div>
             </div>
             <div class="lecture-tab-right">
-                <ul>
-                    <li>
-                        <h3 class="column-title">
-                            “国馆大讲堂”是什么？
-                        </h3>
-                        <p class="column-content">
-                            “国馆大讲堂”是国馆领衔40余家文化自媒体，共同发起的文化公益活动品牌，定位于文化公益领域，以公益、无偿的形式，鼎力支持各类与文化相关之活动。
-                        <p class="column-content">
-                            在“国馆大讲堂”，我们集结文化艺术领域的名人大家、艺术分子、文化达人……当无数个声音集结在一起时，定能吸引无数双眼睛，我们共同为中国文化呐喊，让这个浮躁的时代被复苏的人文关怀所温暖。
-                        </p>
-                        </p>
-                    </li>
-                    <li>
-                        <div class="column-img-text">
-                            <h3 class="column-title">
-                                梦想无需众筹，一切都是免费的！
-                            </h3>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_01.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强场地：2000㎡文化艺术空间免费使用，广州人文新地标，诗意、禅意、酒意，灵动空间，任创想驰骋!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_02.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强宣传：国馆文化自媒体联盟免费推广，微信最具影响力的文化自媒体阵营，300万粉丝皆为忠实拥趸，真正体验“万众瞩目”!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_03.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强资源：“国馆会”高端人脉资源和平台资源鼎力支持，让有限的空间聚变为无限的平台，在这里，每个人都有机会一鸣惊人！
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <h3 class="column-title">
-                            怎样申请加入“国馆大讲堂”文化公益项目？
-                        </h3>
-                        <div class="column-third">
-                            <p>
-                                1、开放对象：<br>
-                                文化、艺术界人士（专业与非专业均可）
-                            </p>
-                            <p>
-                                2、申请条件：<br>
-                                拥有与文化相关的个人作品、个人观点等……
-                            </p>
-                            <p>
-                                3、申请方式：<br>
-                                提交个人资料、作品（若有参与展览、讲坛等活动经验请附上案例）至
-                                <a href="mailto:yaozz@guoguan.com">
-                                    yaozz@guoguan.com
-                                </a>
-                                或联系国馆热线400-900-5000
-                                ，经国馆审核通过后，会安排专人联系，落实宣传、布展等具体事宜。
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+                <script>
+                    document.write(lectureRightTemplate);
+                </script>
             </div>
         </div>
         <div id="tabs1-three" class="clearfix tab-mb">
@@ -482,80 +416,9 @@
                 </div>
             </div>
             <div class="lecture-tab-right">
-                <ul>
-                    <li>
-                        <h3 class="column-title">
-                            “国馆大讲堂”是什么？
-                        </h3>
-                        <p class="column-content">
-                            “国馆大讲堂”是国馆领衔40余家文化自媒体，共同发起的文化公益活动品牌，定位于文化公益领域，以公益、无偿的形式，鼎力支持各类与文化相关之活动。
-                        <p class="column-content">
-                            在“国馆大讲堂”，我们集结文化艺术领域的名人大家、艺术分子、文化达人……当无数个声音集结在一起时，定能吸引无数双眼睛，我们共同为中国文化呐喊，让这个浮躁的时代被复苏的人文关怀所温暖。
-                        </p>
-                        </p>
-                    </li>
-                    <li>
-                        <div class="column-img-text">
-                            <h3 class="column-title">
-                                梦想无需众筹，一切都是免费的！
-                            </h3>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_01.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强场地：2000㎡文化艺术空间免费使用，广州人文新地标，诗意、禅意、酒意，灵动空间，任创想驰骋!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_02.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强宣传：国馆文化自媒体联盟免费推广，微信最具影响力的文化自媒体阵营，300万粉丝皆为忠实拥趸，真正体验“万众瞩目”!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_03.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强资源：“国馆会”高端人脉资源和平台资源鼎力支持，让有限的空间聚变为无限的平台，在这里，每个人都有机会一鸣惊人！
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <h3 class="column-title">
-                            怎样申请加入“国馆大讲堂”文化公益项目？
-                        </h3>
-                        <div class="column-third">
-                            <p>
-                                1、开放对象：<br>
-                                文化、艺术界人士（专业与非专业均可）
-                            </p>
-                            <p>
-                                2、申请条件：<br>
-                                拥有与文化相关的个人作品、个人观点等……
-                            </p>
-                            <p>
-                                3、申请方式：<br>
-                                提交个人资料、作品（若有参与展览、讲坛等活动经验请附上案例）至
-                                <a href="mailto:yaozz@guoguan.com">
-                                    yaozz@guoguan.com
-                                </a>
-                                或联系国馆热线400-900-5000
-                                ，经国馆审核通过后，会安排专人联系，落实宣传、布展等具体事宜。
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+                <script>
+                    document.write(lectureRightTemplate);
+                </script>
             </div>
         </div>
         <div id="tabs1-four" class="clearfix tab-mb">
@@ -611,80 +474,9 @@
                 </div>
             </div>
             <div class="lecture-tab-right">
-                <ul>
-                    <li>
-                        <h3 class="column-title">
-                            “国馆大讲堂”是什么？
-                        </h3>
-                        <p class="column-content">
-                            “国馆大讲堂”是国馆领衔40余家文化自媒体，共同发起的文化公益活动品牌，定位于文化公益领域，以公益、无偿的形式，鼎力支持各类与文化相关之活动。
-                        <p class="column-content">
-                            在“国馆大讲堂”，我们集结文化艺术领域的名人大家、艺术分子、文化达人……当无数个声音集结在一起时，定能吸引无数双眼睛，我们共同为中国文化呐喊，让这个浮躁的时代被复苏的人文关怀所温暖。
-                        </p>
-                        </p>
-                    </li>
-                    <li>
-                        <div class="column-img-text">
-                            <h3 class="column-title">
-                                梦想无需众筹，一切都是免费的！
-                            </h3>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_01.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强场地：2000㎡文化艺术空间免费使用，广州人文新地标，诗意、禅意、酒意，灵动空间，任创想驰骋!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_02.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强宣传：国馆文化自媒体联盟免费推广，微信最具影响力的文化自媒体阵营，300万粉丝皆为忠实拥趸，真正体验“万众瞩目”!
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="img-text-group clearfix">
-                                <div class="left">
-                                    <img src="images/lecture/1_03.jpg" alt=""/>
-                                </div>
-                                <div class="right">
-                                    <p class="column-content-little">
-                                        最强资源：“国馆会”高端人脉资源和平台资源鼎力支持，让有限的空间聚变为无限的平台，在这里，每个人都有机会一鸣惊人！
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <h3 class="column-title">
-                            怎样申请加入“国馆大讲堂”文化公益项目？
-                        </h3>
-                        <div class="column-third">
-                            <p>
-                                1、开放对象：<br>
-                                文化、艺术界人士（专业与非专业均可）
-                            </p>
-                            <p>
-                                2、申请条件：<br>
-                                拥有与文化相关的个人作品、个人观点等……
-                            </p>
-                            <p>
-                                3、申请方式：<br>
-                                提交个人资料、作品（若有参与展览、讲坛等活动经验请附上案例）至
-                                <a href="mailto:yaozz@guoguan.com">
-                                    yaozz@guoguan.com
-                                </a>
-                                或联系国馆热线400-900-5000
-                                ，经国馆审核通过后，会安排专人联系，落实宣传、布展等具体事宜。
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+                <script>
+                    document.write(lectureRightTemplate);
+                </script>
             </div>
         </div>
     </div>
@@ -842,5 +634,6 @@
         });
         $('#tab-container').easytabs();
     });
+
 </script>
 </html>
